welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: not found: type int
	var j:int = 1;
              ^golomb:5: error: not found: type int
	var actuel:int = 1;
                   ^